Velopack更新フローとリリース設定を追加

--- a/.github/workflows/velopack-release.yml
+++ b/.github/workflows/velopack-release.yml
@@ -37,6 +37,7 @@ jobs:
             --packId MarkItDownX \
             --packVersion $env:VPK_VERSION \
             --packDir artifacts/publish \
+            --mainExe MarkItDownX.exe \
             --outputDir artifacts/releases
 
       - name: GitHub Releases へアップロード
