--- a/MarkItDownX/MarkItDownX.csproj
+++ b/MarkItDownX/MarkItDownX.csproj
@@ -9,6 +9,7 @@
   
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Velopack" Version="0.0.*" />
   </ItemGroup>
 
   <!-- WiX Toolset v6.xを追加 -->
